LDEV-3115: Allow branching in the same row when rearranging activities, if it is not too long. Add partial branching properties dialog. Add "transition" button. Several bug fixes and adjustments.

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -41,6 +41,10 @@ input.propertiesContentFieldLearnerCount, input.propertiesContentFieldGroupCount
 	width: 40px;
 }
 
+input.propertiesContentFieldTitle {
+	width: 98%;	
+}
+
 input.groupName {
 	margin-bottom: 5px;
 	width: 98%;
@@ -120,9 +124,10 @@ div#toolbar .split-ui-button + ul {
 	padding: 0 5px 5px 5px;
 	font-size: 11px;
 	color: #2E6E9E;
+	z-index: 1003;
 }
 
-div#toolbar .split-ui-button + ul li div {
+div#toolbar .split-ui-button + ul li {
 	padding-top: 5px;
 	cursor: pointer;
 }
